<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name_monitor">泰达时尚家园</string>
    <string name="title_activity_launch">泰达时尚家园</string>
    <string name="title_activity_login">登陆</string>
    <string name="title_activity_register">注册</string>
    <string name="title_activity_main">泰达时尚家园</string>
    <string name="title_activity_live_list">直播列表</string>
    <string name="title_activity_live_player">在线直播</string>
    <string name="title_activity_follow">关注</string>

    <!-- Strings related to login -->
    <string name="text_phoneNumber">手机号</string>
    <string name="text_password">密码</string>
    <string name="text_verificationCode">验证码</string>
    <string name="text_find_password">找回密码</string>
    <string name="text_getVerificationCode">获取验证码</string>
    <string name="text_getVerificationCode_success">短信验证码发送成功</string>
    <string name="text_getVerificationCode_used">手机号已被使用</string>
    <string name="text_login">登陆</string>
    <string name="text_login_other_method">其他方式登陆</string>
    <string name="text_register">注册账号</string>
    <string name="error_invalid_phoneNumber">请输入正确手机号</string>
    <string name="error_invalid_password">密码太短，不能低于6位</string>
    <string name="error_invalid_verficationCode">验证码不能为空</string>
    <string name="error_incorrect_password">手机号或密码错误</string>
    <string name="error_field_required">手机号未填写</string>
    <string name="error_field_login">登陆失败，手机号或密码错误</string>
    <string name="error_field_register">注册失败</string>
    <string name="text_about">关于</string>
    <string name="text_exit">退出</string>
    <string name="text_follow">关注</string>
    <string name="text_loadmore">点击加载更多</string>
    <string name="text_loading">正在加载中...</string>
</resources>