<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <ImageView
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="25dp"
        android:src="@drawable/login_header_logo" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:text="12334234232"
        android:textColor="@color/colorSecondaryText"
        android:textSize="16sp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="50dp"
        android:clickable="true"
        android:background="@drawable/common_icon_bg"
        android:id="@+id/main_left_find_password"
        android:gravity="center_vertical">
        <ImageView
            android:layout_width="22dp"
            android:layout_height="22dp"
            android:src="@drawable/main_left_find_password_icon"
            android:scaleType="fitCenter"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/text_find_password"
            android:textColor="@color/colorPrimaryText"
            android:textSize="16sp"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="20dp"
        android:clickable="true"
        android:background="@drawable/common_icon_bg"
        android:id="@+id/main_left_about"
        android:gravity="center_vertical">
        <ImageView
            android:layout_width="22dp"
            android:layout_height="22dp"
            android:src="@drawable/main_left_about_icon"
            android:scaleType="fitCenter"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/text_about"
            android:textColor="@color/colorPrimaryText"
            android:textSize="16sp"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="20dp"
        android:clickable="true"
        android:id="@+id/main_left_exit"
        android:background="@drawable/common_icon_bg"
        android:gravity="center_vertical">
        <ImageView
            android:layout_width="22dp"
            android:layout_height="22dp"
            android:src="@drawable/main_left_exit_icon"
            android:scaleType="fitCenter"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/text_exit"
            android:textColor="@color/colorPrimaryText"
            android:textSize="16sp"
            />
    </LinearLayout>

</LinearLayout>
